# longevity-ai-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
longevity_ai/: __init__.py
longevity_ai/config/: logging.py  settings.py
longevity_ai/core/: exceptions.py  models.py
longevity_ai/data/: loaders.py  processors.py
longevity_ai/llm/: openai_client.py  prompts.py
longevity_ai/vectorstore/: embeddings.py  supabase_client.py
scripts/: test_config.py
tests/: conftests.py
tests/unit/test_config/: test_settings.py
